
TODO
---------
Features:
-Add exclusion lists for single sets of elements of phenotypes
-Add exclusion lists for single sets of elements of genotypes
-Compare ID lists of all dvi files to assure correct ordering

Optimizations:

-Reduce memcpy overhead of XR and XR XL factors



Changes
-------------
-------------

9-9-2014
--------------
Fixed bug related to reusing the same instance  of the solver. AIOwrapper is now recreated on every call.
Added Additive,Recessive, Dominant models.
Added option for Custom Models. Custom Additive Model uses custom factors.
Custom Linear Model uses custom models with beta coefficients for each column of the independent variable.

8-9-2014
--------------
Removed individuals with covariates missing
Fixed SST Bug
Fixed Individuals Exclude list Bug
Added faster SST calculation

4-9-2014
--------------
First user usable version.
Several Bug-fixes.
Added parameters to control thresholds of significance.
Storing output as readable .txt and binary data.
Both .txt and binary have different parametrization thresholds.
Text-files should always store less results.
Thresholds for text-files cannot include more results than the ones for binary files.
Added bigger test files.
Added program to transform binary result files  to text files with parametrized thresholds.
Added HPC functions for sum of squares calculations.